--- a/test/bootstrap.html
+++ b/test/bootstrap.html
@@ -7,7 +7,6 @@
     <style>
         div{
             border: 1px solid #0f0f0f;
-
         }
     </style>
 </head>
@@ -26,6 +25,27 @@
         <div class="row">
             <div class="col-md-2 col-md-offset-3">col-md-2</div>
             <div class="col-md-3">col-md-3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-6">col-md-6</div>
+                    <div class="col-md-6">col-md-6</div>
+                </div>
+            </div>
+            <div class="col-md-4">col-md-4</div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2 col-md-push-5">col-md-push-5</div>
+            <div class="col-md-3 ">col-md-4</div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-4 col-md-pull-1">col-md-4</div>
+            <div class="col-md-2">col-md-2</div>
         </div>
     </div>
 </body>
